@@ -9,7 +9,7 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.test.util.ReflectionTestUtils;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.when;
@@ -39,7 +39,7 @@ public class JwtManagerTest {
     @Test
     public void testCreateToken() {
         when(mockUser.getUsername()).thenReturn("testuser");
-        when(mockUser.getAuthorities()).thenReturn(Arrays.asList(() -> "ROLE_USER"));
+        when(mockUser.getAuthorities()).thenReturn(List.of(() -> "ROLE_USER"));
 
         String token = jwtManager.createToken(mockUser);
 
@@ -49,7 +49,7 @@ public class JwtManagerTest {
     @Test
     public void testVerifyValidToken() {
         when(mockUser.getUsername()).thenReturn("testuser");
-        when(mockUser.getAuthorities()).thenReturn(Arrays.asList(() -> "ROLE_USER"));
+        when(mockUser.getAuthorities()).thenReturn(List.of(() -> "ROLE_USER"));
 
         String token = jwtManager.createToken(mockUser);
 
